# FAA_Recognition_Draft

./: .gitmodules  README.md  setup.sh
DATA/MIT_Recognition/: Celaner.py  False_positive_cleaner.py
src/airplane_gazebo_plugin/: CMakeLists.txt  package.xml
src/airplane_gazebo_plugin/include/airplane_gazebo_plugin/: airplane_3d_movement_gazebo_plugin.hpp
src/airplane_gazebo_plugin/src/: airplane_3d_movement_gazebo_plugin.cpp  real_time_factor_publisher.cpp
src/airplane_recognition/: package.xml  setup.cfg  setup.py
src/airplane_recognition/MIT_filtering/: filtered_points.json  filtered_points_for_one_Camera.json
src/airplane_recognition/airplane_recognition/: MIT_spawner_and_saver.py  One_camera_recognition.py  airplane_recognition.py  camera_combination.py  video_generator.py
src/custom_msgs/: CMakeLists.txt  package.xml
src/custom_msgs/msg/: DetectionStatus.msg  InferenceResult.msg  InferenceResult360.msg  Yolov11Inference.msg  Yolov11Inference360.msg
src/plane_bringup/: README.md
src/plane_bringup/AirplaneCharacteristics/: airplane_1.json  airplane_2.json
src/plane_bringup/launch/: MIT_one_camera_recognition.launch.py  MIT_two_airplanes_with_recog.launch.py  airplane.launch.py
src/plane_bringup/models/ERAU/: ERAU.dae  ERAU.sdf  model.config
src/plane_bringup/models/MIT_Section1/: Add_textures_gazebo.py  Section1.sdf  model.config
src/plane_bringup/models/MIT_Section10/: Section10.sdf  model.config
src/plane_bringup/models/MIT_Section11/: Section11.sdf  model.config
src/plane_bringup/models/MIT_Section12/: Section12.sdf  model.config
src/plane_bringup/models/MIT_Section13/: Section13.sdf  model.config
src/plane_bringup/models/MIT_Section14/: .gitattributes  Section14.dae  Section14.sdf  model.config
src/plane_bringup/models/MIT_Section15/: .gitattributes  Section15.dae  Section15.sdf  model.config
src/plane_bringup/models/MIT_Section16/: .gitattributes  Section16.dae  Section16.sdf  model.config
src/plane_bringup/models/MIT_Section2/: Add_textures_gazebo.py  Section2.sdf  model.config
src/plane_bringup/models/MIT_Section3/: Section3.sdf  (+2 more)
src/save_information/: setup.cfg
(+18 files in other folders)
